--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My GitHub Website</title>
+  </head>
+  <body>
+    <h1>Hello!</h1>
+    <p>This is my free website hosted on GitHub Pages.</p>
+  </body>
+</html>
